--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # HuggingFace Token (required for gated models)
 # Get your token from: https://huggingface.co/settings/tokens
 HF_TOKEN=your_huggingface_token_here
+
+# 한국관광공사 API Key (MCP Host 기능에 필요)
+TOUR_API_KEY=your_tour_api_key_here
